Mobile menu horizontal scroll fix

--- a/_common/styles/general.scss
+++ b/_common/styles/general.scss
@@ -201,6 +201,7 @@ td:nth-child(1){
     height: 100%;
     width: 100%;
     z-index: 5;
+    overflow: hidden;
 
     a {
       color: white;
